...
          children: [
            // Logo Gunungan
            Image.asset('assets/welcome.png', width: 180),
            const SizedBox(height: 24),
            // Nama Aplikasi
            Text(
              "WAYANUSA",
              style: GoogleFonts.cinzel(
                fontSize: 28,
                fontWeight: FontWeight.bold,
                letterSpacing: 6,
                color: const Color(0xFF4B3425),
              ),
...
